exports[`no-useless-collection-argument > invalid(1): new Set([]) 1`] = `

  1 | new Set([])

`;

exports[`no-useless-collection-argument > invalid(1): new Set([]) 2`] = `

Message:
> 1 | new Set([])
    |         ^^ The empty array is useless.

Output:
  1 | new Set()

`;

exports[`no-useless-collection-argument > invalid(1): new Set(foo ?? []) 1`] = `

  1 | new Set(foo ?? [])

`;

exports[`no-useless-collection-argument > invalid(1): new Set(foo ?? []) 2`] = `

Message:
> 1 | new Set(foo ?? [])
    |                ^^ The empty array is useless.

Output:
  1 | new Set(foo)

`;

exports[`no-useless-collection-argument > invalid(10): new Set( (([])), ) 1`] = `

  1 | new Set( (([])), )

`;

exports[`no-useless-collection-argument > invalid(10): new Set( (([])), ) 2`] = `

Message:
> 1 | new Set( (([])), )
    |            ^^ The empty array is useless.

Output:
  1 | new Set(  )

`;

exports[`no-useless-collection-argument > invalid(10): new Set( foo ?? (( [] )) ) 1`] = `

  1 | new Set( foo ?? (( [] )) )

`;

exports[`no-useless-collection-argument > invalid(10): new Set( foo ?? (( [] )) ) 2`] = `

Message:
> 1 | new Set( foo ?? (( [] )) )
    |                    ^^ The empty array is useless.

Output:
  1 | new Set( foo )

`;

exports[`no-useless-collection-argument > invalid(11): new Set( (await foo) ?? [] ) 1`] = `

  1 | new Set( (await foo) ?? [] )

`;

exports[`no-useless-collection-argument > invalid(11): new Set( (await foo) ?? [] ) 2`] = `

Message:
> 1 | new Set( (await foo) ?? [] )
    |                         ^^ The empty array is useless.

Output:
  1 | new Set( (await foo) )

`;

exports[`no-useless-collection-argument > invalid(12): new Set( (0, foo) ?? [] ) 1`] = `

  1 | new Set( (0, foo) ?? [] )

`;

exports[`no-useless-collection-argument > invalid(12): new Set( (0, foo) ?? [] ) 2`] = `

Message:
> 1 | new Set( (0, foo) ?? [] )
    |                      ^^ The empty array is useless.

Output:
  1 | new Set( (0, foo) )

`;

exports[`no-useless-collection-argument > invalid(13): new Set( (( (0, foo) ?? [] )) ) 1`] = `

  1 | new Set( (( (0, foo) ?? [] )) )

`;

exports[`no-useless-collection-argument > invalid(13): new Set( (( (0, foo) ?? [] )) ) 2`] = `

Message:
> 1 | new Set( (( (0, foo) ?? [] )) )
    |                         ^^ The empty array is useless.

Output:
  1 | new Set(  (0, foo)  )

`;

exports[`no-useless-collection-argument > invalid(14): new Set(document.all ?? []) 1`] = `

  1 | new Set(document.all ?? [])

`;

exports[`no-useless-collection-argument > invalid(14): new Set(document.all ?? []) 2`] = `

Message:
> 1 | new Set(document.all ?? [])
    |                         ^^ The empty array is useless.

Output:
  1 | new Set(document.all)

`;

exports[`no-useless-collection-argument > invalid(15): new Set([] ?? \"\") 1`] = `

  1 | new Set([] ?? "")

`;

exports[`no-useless-collection-argument > invalid(15): new Set([] ?? \"\") 2`] = `

Message:
> 1 | new Set([] ?? "")
    |               ^^ The empty string is useless.

Output:
  1 | new Set([])

`;

exports[`no-useless-collection-argument > invalid(16): new Set( (( (( \"\" )) ?? (( [] )) )) ) 1`] = `

  1 | new Set( (( (( "" )) ?? (( [] )) )) )

`;

exports[`no-useless-collection-argument > invalid(16): new Set( (( (( \"\" )) ?? (( [] )) )) ) 2`] = `

Message:
> 1 | new Set( (( (( "" )) ?? (( [] )) )) )
    |                            ^^ The empty array is useless.

Output:
  1 | new Set(  (( "" ))  )

`;

exports[`no-useless-collection-argument > invalid(17): new Set(foo ?? bar ?? []) 1`] = `

  1 | new Set(foo ?? bar ?? [])

`;

exports[`no-useless-collection-argument > invalid(17): new Set(foo ?? bar ?? []) 2`] = `

Message:
> 1 | new Set(foo ?? bar ?? [])
    |                       ^^ The empty array is useless.

Output:
  1 | new Set(foo ?? bar)

`;

exports[`no-useless-collection-argument > invalid(18): new Set([/**/]) 1`] = `

  1 | new Set([/**/])

`;

exports[`no-useless-collection-argument > invalid(18): new Set([/**/]) 2`] = `

Message:
> 1 | new Set([/**/])
    |         ^^^^^^ The empty array is useless.

Suggestion 1/1: Remove the empty array:
  1 | new Set( /**/)

`;

exports[`no-useless-collection-argument > invalid(19): new Set(a ?? /* keep */ null) 1`] = `

  1 | new Set(a ?? /* keep */ null)

`;

exports[`no-useless-collection-argument > invalid(19): new Set(a ?? /* keep */ null) 2`] = `

Message:
> 1 | new Set(a ?? /* keep */ null)
    |                         ^^^^ The \`null\` is useless.

Suggestion 1/1: Remove the \`null\`:
  1 | new Set(a)

`;

exports[`no-useless-collection-argument > invalid(2): new Set(\"\") 1`] = `

  1 | new Set("")

`;

exports[`no-useless-collection-argument > invalid(2): new Set(\"\") 2`] = `

Message:
> 1 | new Set("")
    |         ^^ The empty string is useless.

Output:
  1 | new Set()

`;

exports[`no-useless-collection-argument > invalid(2): new Set(foo ?? \"\") 1`] = `

  1 | new Set(foo ?? "")

`;

exports[`no-useless-collection-argument > invalid(2): new Set(foo ?? \"\") 2`] = `

Message:
> 1 | new Set(foo ?? "")
    |                ^^ The empty string is useless.

Output:
  1 | new Set(foo)

`;

exports[`no-useless-collection-argument > invalid(20): new Set(a /* keep */ ?? null) 1`] = `

  1 | new Set(a /* keep */ ?? null)

`;

exports[`no-useless-collection-argument > invalid(20): new Set(a /* keep */ ?? null) 2`] = `

Message:
> 1 | new Set(a /* keep */ ?? null)
    |                         ^^^^ The \`null\` is useless.

Suggestion 1/1: Remove the \`null\`:
  1 | new Set(a)

`;

exports[`no-useless-collection-argument > invalid(21): new Set(a ?? // keep\n\t\tnull) 1`] = `

  1 | new Set(a ?? // keep
  2 | 		null)

`;

exports[`no-useless-collection-argument > invalid(21): new Set(a ?? // keep\n\t\tnull) 2`] = `

Message:
  1 | new Set(a ?? // keep
> 2 | 		null)
    | 		^^^^ The \`null\` is useless.

Suggestion 1/1: Remove the \`null\`:
  1 | new Set(a)

`;

exports[`no-useless-collection-argument > invalid(22): new Set( (/* keep */([])) ) 1`] = `

  1 | new Set( (/* keep */([])) )

`;

exports[`no-useless-collection-argument > invalid(22): new Set( (/* keep */([])) ) 2`] = `

Message:
> 1 | new Set( (/* keep */([])) )
    |                      ^^ The empty array is useless.

Suggestion 1/1: Remove the empty array:
  1 | new Set(  /* keep */ )

`;

exports[`no-useless-collection-argument > invalid(23): new Set([] /* keep */,) 1`] = `

  1 | new Set([] /* keep */,)

`;

exports[`no-useless-collection-argument > invalid(23): new Set([] /* keep */,) 2`] = `

Message:
> 1 | new Set([] /* keep */,)
    |         ^^ The empty array is useless.

Suggestion 1/1: Remove the empty array:
  1 | new Set( /* keep */)

`;

exports[`no-useless-collection-argument > invalid(24): new Set( (( /* keep */ [] )) ) 1`] = `

  1 | new Set( (( /* keep */ [] )) )

`;

exports[`no-useless-collection-argument > invalid(24): new Set( (( /* keep */ [] )) ) 2`] = `

Message:
> 1 | new Set( (( /* keep */ [] )) )
    |                        ^^ The empty array is useless.

Suggestion 1/1: Remove the empty array:
  1 | new Set(  /* keep */ )

`;

exports[`no-useless-collection-argument > invalid(25): new Set(/* keep */ a ?? null) 1`] = `

  1 | new Set(/* keep */ a ?? null)

`;

exports[`no-useless-collection-argument > invalid(25): new Set(/* keep */ a ?? null) 2`] = `

Message:
> 1 | new Set(/* keep */ a ?? null)
    |                         ^^^^ The \`null\` is useless.

Output:
  1 | new Set(/* keep */ a)

`;

exports[`no-useless-collection-argument > invalid(26): new Set(a ?? null /* keep */) 1`] = `

  1 | new Set(a ?? null /* keep */)

`;

exports[`no-useless-collection-argument > invalid(26): new Set(a ?? null /* keep */) 2`] = `

Message:
> 1 | new Set(a ?? null /* keep */)
    |              ^^^^ The \`null\` is useless.

Output:
  1 | new Set(a /* keep */)

`;

exports[`no-useless-collection-argument > invalid(3): new Set(foo ?? undefined) 1`] = `

  1 | new Set(foo ?? undefined)

`;

exports[`no-useless-collection-argument > invalid(3): new Set(foo ?? undefined) 2`] = `

Message:
> 1 | new Set(foo ?? undefined)
    |                ^^^^^^^^^ The \`undefined\` is useless.

Output:
  1 | new Set(foo)

`;

exports[`no-useless-collection-argument > invalid(3): new Set(undefined) 1`] = `

  1 | new Set(undefined)

`;

exports[`no-useless-collection-argument > invalid(3): new Set(undefined) 2`] = `

Message:
> 1 | new Set(undefined)
    |         ^^^^^^^^^ The \`undefined\` is useless.

Output:
  1 | new Set()

`;

exports[`no-useless-collection-argument > invalid(4): new Set(foo ?? null) 1`] = `

  1 | new Set(foo ?? null)

`;

exports[`no-useless-collection-argument > invalid(4): new Set(foo ?? null) 2`] = `

Message:
> 1 | new Set(foo ?? null)
    |                ^^^^ The \`null\` is useless.

Output:
  1 | new Set(foo)

`;

exports[`no-useless-collection-argument > invalid(4): new Set(null) 1`] = `

  1 | new Set(null)

`;

exports[`no-useless-collection-argument > invalid(4): new Set(null) 2`] = `

Message:
> 1 | new Set(null)
    |         ^^^^ The \`null\` is useless.

Output:
  1 | new Set()

`;

exports[`no-useless-collection-argument > invalid(5): new WeakSet([]) 1`] = `

  1 | new WeakSet([])

`;

exports[`no-useless-collection-argument > invalid(5): new WeakSet([]) 2`] = `

Message:
> 1 | new WeakSet([])
    |             ^^ The empty array is useless.

Output:
  1 | new WeakSet()

`;

exports[`no-useless-collection-argument > invalid(5): new WeakSet(foo ?? []) 1`] = `

  1 | new WeakSet(foo ?? [])

`;

exports[`no-useless-collection-argument > invalid(5): new WeakSet(foo ?? []) 2`] = `

Message:
> 1 | new WeakSet(foo ?? [])
    |                    ^^ The empty array is useless.

Output:
  1 | new WeakSet(foo)

`;

exports[`no-useless-collection-argument > invalid(6): new Map([]) 1`] = `

  1 | new Map([])

`;

exports[`no-useless-collection-argument > invalid(6): new Map([]) 2`] = `

Message:
> 1 | new Map([])
    |         ^^ The empty array is useless.

Output:
  1 | new Map()

`;

exports[`no-useless-collection-argument > invalid(6): new Map(foo ?? []) 1`] = `

  1 | new Map(foo ?? [])

`;

exports[`no-useless-collection-argument > invalid(6): new Map(foo ?? []) 2`] = `

Message:
> 1 | new Map(foo ?? [])
    |                ^^ The empty array is useless.

Output:
  1 | new Map(foo)

`;

exports[`no-useless-collection-argument > invalid(7): new WeakMap([]) 1`] = `

  1 | new WeakMap([])

`;

exports[`no-useless-collection-argument > invalid(7): new WeakMap([]) 2`] = `

Message:
> 1 | new WeakMap([])
    |             ^^ The empty array is useless.

Output:
  1 | new WeakMap()

`;

exports[`no-useless-collection-argument > invalid(7): new WeakMap(foo ?? []) 1`] = `

  1 | new WeakMap(foo ?? [])

`;

exports[`no-useless-collection-argument > invalid(7): new WeakMap(foo ?? []) 2`] = `

Message:
> 1 | new WeakMap(foo ?? [])
    |                    ^^ The empty array is useless.

Output:
  1 | new WeakMap(foo)

`;

exports[`no-useless-collection-argument > invalid(8): new Set( (([])) ) 1`] = `

  1 | new Set( (([])) )

`;

exports[`no-useless-collection-argument > invalid(8): new Set( (([])) ) 2`] = `

Message:
> 1 | new Set( (([])) )
    |            ^^ The empty array is useless.

Output:
  1 | new Set(  )

`;

exports[`no-useless-collection-argument > invalid(8): new Set( ((foo ?? [])) ) 1`] = `

  1 | new Set( ((foo ?? [])) )

`;

exports[`no-useless-collection-argument > invalid(8): new Set( ((foo ?? [])) ) 2`] = `

Message:
> 1 | new Set( ((foo ?? [])) )
    |                   ^^ The empty array is useless.

Output:
  1 | new Set( foo )

`;

exports[`no-useless-collection-argument > invalid(9): new Set( (( foo )) ?? [] ) 1`] = `

  1 | new Set( (( foo )) ?? [] )

`;

exports[`no-useless-collection-argument > invalid(9): new Set( (( foo )) ?? [] ) 2`] = `

Message:
> 1 | new Set( (( foo )) ?? [] )
    |                       ^^ The empty array is useless.

Output:
  1 | new Set( (( foo )) )

`;

exports[`no-useless-collection-argument > invalid(9): new Set([],) 1`] = `

  1 | new Set([],)

`;

exports[`no-useless-collection-argument > invalid(9): new Set([],) 2`] = `

Message:
> 1 | new Set([],)
    |         ^^ The empty array is useless.

Output:
  1 | new Set()

`;
